--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <script src="script.js"></script>
-    <p>Hello World!</p>
+    <p>Hello World! It's Monday, March 15.</p>
   </body>
 </html>
