I added nav bar, logo, titles and some ingredients

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
+  <!--link to css-->
+  <link rel="stylesheet" type="text/css" href="style.css">
+   <!--merriweather Regular 400 italic-->
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
+
   <body>
-    <script src="script.js"></script>
-    <p>Hello World! It's Monday, March 15.</p>
-  </body>
+  <header>
+    <nav>
+      <img src= "nav2.png"/>
+    </nav>
+  <!--main logo-->
+      <div id="mainlogo">
+        <img src= "logobold.png"/>
+      </div>
+
+  </header>
+
+  <main>
+    <head>
+      <h1>Best Brownies</h2>
+      <h2 class="ingredient">Ingredients</h2>
+        <div class="list">
+          <input type="checkbox" name="½ cup butter" value="½ cup butter">½ cup butter<br>
+          <input type="checkbox" name="1 cup white sugar" value="1 cup white sugar">1 cup white sugar<br>
+          <input type="checkbox" name="2 eggs" value="2 eggs">2 eggs<br>
+          <input type="checkbox" name="1 teaspoon vanilla extract" value="1 teaspoon vanilla extract">1 teaspoon vanilla extract<br>
+        </div>
+    <h2 class="steps">Steps</h2>
+
+  </main>
+
+
+  <footer>
+
+  </footer>
+ </body>
 </html>
