I added the ingredients and the steps. I created a login/sign up section and a search bar.

--- a/index.html
+++ b/index.html
@@ -14,20 +14,46 @@
       <div id="mainlogo">
         <img src= "logobold.png"/>
       </div>
+    <p><a href="https://www.allrecipes.com/account/signin/?actionsource=recipe&loginreferrerurl=%2Frecipe%2F10549%2Fbest-brownies%2F&testcookieredirect=1" target="_blank">Login</a> |  <a href="https://www.allrecipes.com/account/signup/" target="_blank">Sign up</a></p>
+    <!--search bar-->
+     <input type="text" placeholder="chocolate">
 
   </header>
 
   <main>
     <head>
       <h1>Best Brownies</h2>
+      <!--list of ingredients-->
       <h2 class="ingredient">Ingredients</h2>
         <div class="list">
           <input type="checkbox" name="½ cup butter" value="½ cup butter">½ cup butter<br>
           <input type="checkbox" name="1 cup white sugar" value="1 cup white sugar">1 cup white sugar<br>
           <input type="checkbox" name="2 eggs" value="2 eggs">2 eggs<br>
           <input type="checkbox" name="1 teaspoon vanilla extract" value="1 teaspoon vanilla extract">1 teaspoon vanilla extract<br>
+          <input type="checkbox" name="⅓ cup unsweetened cocoa powder" value="⅓ cup unsweetened cocoa powder">⅓ cup unsweetened cocoa powder<br>
+          <input type="checkbox" name="½ cup all-purpose flour" value="½ cup all-purpose flour">½ cup all-purpose flour<br>
+          <input type="checkbox" name="¼ teaspoon salt" value="¼ teaspoon salt">¼ teaspoon salt<br>
+          <input type="checkbox" name="¼ teaspoon baking powder" value="¼ teaspoon baking powder">¼ teaspoon baking powder<br>
         </div>
-    <h2 class="steps">Steps</h2>
+        <h4>Frosting:</h4>
+        <div class="frostinglist">
+          <input type="checkbox" name="3 tablespoons butter, softened" value="3 tablespoons butter, softened">3 tablespoons butter, softened<br>
+          <input type="checkbox" name="3 tablespoons unsweetened cocoa powder" value="3 tablespoons unsweetened cocoa powder">3 tablespoons unsweetened cocoa powder<br>
+          <input type="checkbox" name="1 tablespoon honey" value="1 tablespoon honey">1 tablespoon honey<br>
+          <input type="checkbox" name="1 teaspoon vanilla extract" value="1 teaspoon vanilla extract">1 teaspoon vanilla extract<br>
+          <input type="checkbox" name="1 cup confectioners' sugar" value="1 cup confectioners' sugar">1 cup confectioners' sugar<br>
+        </div>
+
+   <!--steps-->
+    <h2 class="step">Steps</h2>
+      <ol class="steps">
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour an 8-inch square pan.</li>
+        <li>In a large saucepan, melt 1/2 cup butter. Remove from heat, and stir in sugar, eggs, and 1 teaspoon vanilla. Beat in 1/3 cup cocoa, 1/2 cup flour, salt, and baking powder. Spread batter into prepared pan.</li>
+        <li>Bake in the preheated oven for 25 to 30 minutes. Do not overcook.</li>
+        <br>
+        <li>To Make Frosting: Combine 3 tablespoons softened butter, 3 tablespoons cocoa, honey, 1 teaspoon vanilla extract, and 1 cup confectioners' sugar. Stir until smooth. Frost brownies while they are still warm.</li>
+      </ol>
+
 
   </main>
 
