I made some texts bold.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       </div>
     <p><a href="https://www.allrecipes.com/account/signin/?actionsource=recipe&loginreferrerurl=%2Frecipe%2F10549%2Fbest-brownies%2F&testcookieredirect=1" target="_blank">Login</a> |  <a href="https://www.allrecipes.com/account/signup/" target="_blank">Sign up</a></p>
     <!--search bar-->
-     <input type="text" placeholder="chocolate">
+     <input type="text" placeholder="Chocolate recipes">
 
   </header>
 
   <main>
     <head>
-      <h1>Best Brownies</h2>
+      <h1><strong>Best Brownies</strong></h2>
       <!--list of ingredients-->
       <h2 class="ingredient">Ingredients</h2>
         <div class="list">
@@ -51,7 +51,7 @@
         <li>In a large saucepan, melt 1/2 cup butter. Remove from heat, and stir in sugar, eggs, and 1 teaspoon vanilla. Beat in 1/3 cup cocoa, 1/2 cup flour, salt, and baking powder. Spread batter into prepared pan.</li>
         <li>Bake in the preheated oven for 25 to 30 minutes. Do not overcook.</li>
         <br>
-        <li>To Make Frosting: Combine 3 tablespoons softened butter, 3 tablespoons cocoa, honey, 1 teaspoon vanilla extract, and 1 cup confectioners' sugar. Stir until smooth. Frost brownies while they are still warm.</li>
+        <li><strong>To Make Frosting:</strong> Combine 3 tablespoons softened butter, 3 tablespoons cocoa, honey, 1 teaspoon vanilla extract, and 1 cup confectioners' sugar. Stir until smooth. Frost brownies while they are still warm.</li>
       </ol>
 
 
