--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
    <!--merriweather Regular 400 italic-->
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
-
+<title>ChocolateBrowniesRecipe</title>
   <body>
   <header>
     <nav>
@@ -16,13 +16,26 @@
       </div>
     <p><a href="https://www.allrecipes.com/account/signin/?actionsource=recipe&loginreferrerurl=%2Frecipe%2F10549%2Fbest-brownies%2F&testcookieredirect=1" target="_blank">Login</a> |  <a href="https://www.allrecipes.com/account/signup/" target="_blank">Sign up</a></p>
     <!--search bar-->
+    <form class="searchrecipes" action="https://www.allrecipes.com/search/results/?">
      <input type="text" placeholder="Chocolate recipes">
+     <button type="submit"><i class="search"></i></button>
+    </form>
 
   </header>
 
   <main>
     <head>
       <h1><strong>Best Brownies</strong></h2>
+      <h5>13,329 Ratings | 10,294 Reviews | 1,427 Photos</h5>
+      
+      <h3>By <a href="https://www.allrecipes.com/cook/sunnyside1@hotmail.com/recipes/" target="_blank">Angie</a></h3>
+      <!--image of brownies-->
+      <div class="image">
+        <a href="https://www.allrecipes.com/video/617/best-brownies/"><img class="browniesimage" src= "chocolatebrownie.png"/></a>
+      <div class="middle">
+        <div class="watch">Watch the video</div>
+      </div>
+      </div>
       <!--list of ingredients-->
       <h2 class="ingredient">Ingredients</h2>
         <div class="list">
