profile image, set the weight and height of the search bar.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p><a href="https://www.allrecipes.com/account/signin/?actionsource=recipe&loginreferrerurl=%2Frecipe%2F10549%2Fbest-brownies%2F&testcookieredirect=1" target="_blank">Login</a> |  <a href="https://www.allrecipes.com/account/signup/" target="_blank">Sign up</a></p>
     <!--search bar-->
     <form class="searchrecipes" action="https://www.allrecipes.com/search/results/?">
-     <input type="text" placeholder="Chocolate recipes">
+     <input type="text" placeholder="More Chocolate Recipes">
      <button type="submit"><i class="search"></i></button>
     </form>
 
@@ -27,7 +27,7 @@
     <head>
       <h1><strong>Best Brownies</strong></h2>
       <h5>13,329 Ratings | 10,294 Reviews | 1,427 Photos</h5>
-      
+      <img id="profile" src="profile.png"/>
       <h3>By <a href="https://www.allrecipes.com/cook/sunnyside1@hotmail.com/recipes/" target="_blank">Angie</a></h3>
       <!--image of brownies-->
       <div class="image">
@@ -38,7 +38,7 @@
       </div>
       <!--list of ingredients-->
       <h2 class="ingredient">Ingredients</h2>
-        <div class="list">
+        <section class="list">
           <input type="checkbox" name="½ cup butter" value="½ cup butter">½ cup butter<br>
           <input type="checkbox" name="1 cup white sugar" value="1 cup white sugar">1 cup white sugar<br>
           <input type="checkbox" name="2 eggs" value="2 eggs">2 eggs<br>
@@ -47,15 +47,15 @@
           <input type="checkbox" name="½ cup all-purpose flour" value="½ cup all-purpose flour">½ cup all-purpose flour<br>
           <input type="checkbox" name="¼ teaspoon salt" value="¼ teaspoon salt">¼ teaspoon salt<br>
           <input type="checkbox" name="¼ teaspoon baking powder" value="¼ teaspoon baking powder">¼ teaspoon baking powder<br>
-        </div>
+        </section>
         <h4>Frosting:</h4>
-        <div class="frostinglist">
+        <section class="frostinglist">
           <input type="checkbox" name="3 tablespoons butter, softened" value="3 tablespoons butter, softened">3 tablespoons butter, softened<br>
           <input type="checkbox" name="3 tablespoons unsweetened cocoa powder" value="3 tablespoons unsweetened cocoa powder">3 tablespoons unsweetened cocoa powder<br>
           <input type="checkbox" name="1 tablespoon honey" value="1 tablespoon honey">1 tablespoon honey<br>
           <input type="checkbox" name="1 teaspoon vanilla extract" value="1 teaspoon vanilla extract">1 teaspoon vanilla extract<br>
           <input type="checkbox" name="1 cup confectioners' sugar" value="1 cup confectioners' sugar">1 cup confectioners' sugar<br>
-        </div>
+        </section>
 
    <!--steps-->
     <h2 class="step">Steps</h2>
@@ -66,7 +66,9 @@
         <br>
         <li><strong>To Make Frosting:</strong> Combine 3 tablespoons softened butter, 3 tablespoons cocoa, honey, 1 teaspoon vanilla extract, and 1 cup confectioners' sugar. Stir until smooth. Frost brownies while they are still warm.</li>
       </ol>
+    <section>
 
+    </section>
 
   </main>
 
