change font of steps and nutrition

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </ol>
    
    </section>
-   <section>
+   <section class="nutrition">
       <h3>Nutrition Facts</h3>
     <article>
       <p><strong>Per Serving:</strong> 183 calories; protein 1.8g; carbohydrates 25.7g; fat 9g; cholesterol 44.2mg; sodium 109.7mg.</p>
