add see other section, footer logo and copyright.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <img src= "nav2.png"/>
     </nav>
   <!--main logo-->
-      <div id="mainlogo">
-        <img src= "logobold.png"/>
-      </div>
+      <figure id="mainlogo">
+        <a href="https://www.allrecipes.com/"><img src= "logobold.png"/></a>
+      </figure>
     <p><a href="https://www.allrecipes.com/account/signin/?actionsource=recipe&loginreferrerurl=%2Frecipe%2F10549%2Fbest-brownies%2F&testcookieredirect=1" target="_blank">Login</a> |  <a href="https://www.allrecipes.com/account/signup/" target="_blank">Sign up</a></p>
     <!--search bar-->
     <form class="searchrecipes" method="GET" action="https://www.allrecipes.com/search/results/?">
@@ -68,26 +68,37 @@
         <br>
         <li><strong>To Make Frosting:</strong> Combine 3 tablespoons softened butter, 3 tablespoons cocoa, honey, 1 teaspoon vanilla extract, and 1 cup confectioners' sugar. Stir until smooth. Frost brownies while they are still warm.</li>
       </ol>
-   
    </section>
+
    <section class="nutrition">
       <h3>Nutrition Facts</h3>
     <article>
       <p><strong>Per Serving:</strong> 183 calories; protein 1.8g; carbohydrates 25.7g; fat 9g; cholesterol 44.2mg; sodium 109.7mg.</p>
     </article>
    </section>
+
       <!--see more-->
    <aside class="see-other">
-      <h3>See other chocolate recipes</h3>
-
-
+      <!--<h3>See other chocolate recipes</h3>-->
+      <section class="chocolate-images">
+        <a href="https://www.allrecipes.com/recipe/222788/grilled-chocolate-sandwich/" target="_blank"><img id="chocolate1" src= "chocolate1.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/229421/chocolate-bar-hot-chocolate/" target="_blank"><img id="chocolate2" src= "chocolate2.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/261176/perfectly-chocolate-chocolate-cake/" target="_blank"><img id="chocolate3" src= "chocolate3.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/15097/ultimate-double-chocolate-cookies/" target="_blank"><img id="chocolate4" src= "chocolate4.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/21601/chocolate-strawberries/" target="_blank"><img id="chocolate5" src= "chocolate5.png"/></a>
+      </section>
     </aside>
-
   </main>
 
-
   <footer>
+    <a href="https://www.allrecipes.com/"><img id="footer-logo" src="logo2.png"/></a>
+    <section>
 
+    </section>
+    <section class="copyright">
+      <img id="meredith" src="meredith.png"/>
+      <p>Allrecipes is part of the Meredith Food Group. © Copyright 2021 <a href="https://www.meredith.com/">Meredith Corporation</a>. All Rights Reserved.</p>
+    </section>
 
   </footer>
  </body>
