complete footer, make subscribe icon change when hover.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <body>
   <header>
     <nav>
-      <img src= "nav2.png"/>
+      <img src= "images/nav2.png"/>
     </nav>
   <!--main logo-->
       <figure id="mainlogo">
-        <a href="https://www.allrecipes.com/"><img src= "logobold.png"/></a>
+        <a href="https://www.allrecipes.com/"><img src= "images/logobold.png"/></a>
       </figure>
     <p><a href="https://www.allrecipes.com/account/signin/?actionsource=recipe&loginreferrerurl=%2Frecipe%2F10549%2Fbest-brownies%2F&testcookieredirect=1" target="_blank">Login</a> |  <a href="https://www.allrecipes.com/account/signup/" target="_blank">Sign up</a></p>
     <!--search bar-->
     <form class="searchrecipes" method="GET" action="https://www.allrecipes.com/search/results/?">
      <input id="textarea" type="text" name="search" placeholder="More Chocolate Recipes">
-     <input id="submit" type="image" src="search-icon.png" value="Search"/>
+     <input id="submit" type="image" src="images/search-icon.png" value="Search"/>
      <!--<button type="submit"><i class="search"></i></button>-->
     </form>
 
@@ -28,11 +28,11 @@
     <head>
       <h1><strong>Best Brownies</strong></h2>
       <h5>13,329 Ratings | 10,294 Reviews | 1,427 Photos</h5>
-      <img id="profile" src="profile.png"/>
+      <img id="profile" src="images/profile.png"/>
       <h3>By <a href="https://www.allrecipes.com/cook/sunnyside1@hotmail.com/recipes/" target="_blank">Angie</a></h3>
       <!--image of brownies-->
       <figure class="image">
-        <a id="video1" href="https://www.allrecipes.com/video/617/best-brownies/"><img class="browniesimage" src= "chocolatebrownie.png"/></a>
+        <a id="video1" href="https://www.allrecipes.com/video/617/best-brownies/"><img class="browniesimage" src= "images/chocolatebrownie.png"/></a>
       <div class="middle">
         <div class="watch">Watch the video</div>
       </div>
@@ -81,22 +81,52 @@
    <aside class="see-other">
       <!--<h3>See other chocolate recipes</h3>-->
       <section class="chocolate-images">
-        <a href="https://www.allrecipes.com/recipe/222788/grilled-chocolate-sandwich/" target="_blank"><img id="chocolate1" src= "chocolate1.png"/></a>
-        <a href="https://www.allrecipes.com/recipe/229421/chocolate-bar-hot-chocolate/" target="_blank"><img id="chocolate2" src= "chocolate2.png"/></a>
-        <a href="https://www.allrecipes.com/recipe/261176/perfectly-chocolate-chocolate-cake/" target="_blank"><img id="chocolate3" src= "chocolate3.png"/></a>
-        <a href="https://www.allrecipes.com/recipe/15097/ultimate-double-chocolate-cookies/" target="_blank"><img id="chocolate4" src= "chocolate4.png"/></a>
-        <a href="https://www.allrecipes.com/recipe/21601/chocolate-strawberries/" target="_blank"><img id="chocolate5" src= "chocolate5.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/222788/grilled-chocolate-sandwich/" target="_blank"><img id="chocolate1" src= "images/chocolate1.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/229421/chocolate-bar-hot-chocolate/" target="_blank"><img id="chocolate2" src= "images/chocolate2.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/261176/perfectly-chocolate-chocolate-cake/" target="_blank"><img id="chocolate3" src= "images/chocolate3.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/15097/ultimate-double-chocolate-cookies/" target="_blank"><img id="chocolate4" src= "images/chocolate4.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/21601/chocolate-strawberries/" target="_blank"><img id="chocolate5" src= "images/chocolate5.png"/></a>
       </section>
     </aside>
   </main>
 
   <footer>
-    <a href="https://www.allrecipes.com/"><img id="footer-logo" src="logo2.png"/></a>
-    <section>
-
+    <a href="https://www.allrecipes.com/"><img id="footer-logo" src="images/logo2.png"/></a>
+    <section class="learn-more">
+      <h3>Learn More</h3>
+      <h4><a href="https://websupport.meredith.com/hc/en-us" target="_blank">Customer Service</a></h4>
+      <h4><a href="http://dish.allrecipes.com/mobile-apps/" target="_blank">Apps</a></h4>
+      <h4><a href="http://dish.allrecipes.com/faq-sitemap/" target="_blank">Site Maps</a></h4>
     </section>
+
+    <section class="contact-us">
+      <h3>Contact Us</h3>
+
+      <section class="subscribe-icons">
+        <a href="https://www.facebook.com/allrecipes" target="_blank">
+        <img id="facebook" src="images/facebook1.jpeg" onmouseover="this.src='images/facebook2.png'" onmouseout="this.src='images/facebook1.jpeg'"/></a>
+
+
+        <!--
+        <img id="facebook" src="images/facebook1.jpeg"/>
+        <a href="https://www.facebook.com/allrecipes" target="_blank"><img id="facebook-hover" src="images/facebook2.png"/></a>
+
+        <img id="twitter" src="images/twitter1.jpeg"/>
+        <a href="https://twitter.com/Allrecipes" target="_blank"><img id="twitter-hover" src="images/twitter2.png"/></a>
+
+        <img id="instagram" src="images/instagram1.jpeg"/>
+        <a href="https://www.instagram.com/allrecipes/" target="_blank"><img id="instagram-hover" src="images/instagram2.png"/></a>
+        
+        <img id="pinterest" src="images/pinterest1.jpeg"/>
+        <a href="https://www.pinterest.ca/allrecipes/" target="_blank"><img id="pinterest-hover" src="images/pinterest2.png"/></a>
+        -->
+      </section>
+
+      <h4><a href="http://x.specialoffers.meredith.com/ats/show.aspx?cr=588&fm=293&regSource=3667"  target="_blank">Subscribe</a></h4>
+    </section>
+
     <section class="copyright">
-      <img id="meredith" src="meredith.png"/>
+      <img id="meredith" src="images/meredith.png"/>
       <p>Allrecipes is part of the Meredith Food Group. © Copyright 2021 <a href="https://www.meredith.com/">Meredith Corporation</a>. All Rights Reserved.</p>
     </section>
 
