change footer background

--- a/index.html
+++ b/index.html
@@ -79,14 +79,11 @@
 
       <!--see more-->
    <aside class="see-other">
-      <!--<h3>See other chocolate recipes</h3>-->
-      <section class="chocolate-images">
         <a href="https://www.allrecipes.com/recipe/222788/grilled-chocolate-sandwich/" target="_blank"><img id="chocolate1" src= "images/chocolate1.png"/></a>
         <a href="https://www.allrecipes.com/recipe/229421/chocolate-bar-hot-chocolate/" target="_blank"><img id="chocolate2" src= "images/chocolate2.png"/></a>
         <a href="https://www.allrecipes.com/recipe/261176/perfectly-chocolate-chocolate-cake/" target="_blank"><img id="chocolate3" src= "images/chocolate3.png"/></a>
         <a href="https://www.allrecipes.com/recipe/15097/ultimate-double-chocolate-cookies/" target="_blank"><img id="chocolate4" src= "images/chocolate4.png"/></a>
         <a href="https://www.allrecipes.com/recipe/21601/chocolate-strawberries/" target="_blank"><img id="chocolate5" src= "images/chocolate5.png"/></a>
-      </section>
     </aside>
   </main>
 
@@ -106,20 +103,14 @@
         <a href="https://www.facebook.com/allrecipes" target="_blank">
         <img id="facebook" src="images/facebook1.jpeg" onmouseover="this.src='images/facebook2.png'" onmouseout="this.src='images/facebook1.jpeg'"/></a>
 
+        <a href="https://twitter.com/Allrecipes" target="_blank">
+        <img id="twitter" src="images/twitter1.jpeg" onmouseover="this.src='images/twitter2.png'" onmouseout="this.src='images/twitter1.jpeg'"/></a>
 
-        <!--
-        <img id="facebook" src="images/facebook1.jpeg"/>
-        <a href="https://www.facebook.com/allrecipes" target="_blank"><img id="facebook-hover" src="images/facebook2.png"/></a>
+        <a href="https://www.instagram.com/allrecipes/" target="_blank">
+        <img id="instagram" src="images/instagram1.jpeg" onmouseover="this.src='images/instagram2.png'" onmouseout="this.src='images/instagram1.jpeg'"/></a>
 
-        <img id="twitter" src="images/twitter1.jpeg"/>
-        <a href="https://twitter.com/Allrecipes" target="_blank"><img id="twitter-hover" src="images/twitter2.png"/></a>
-
-        <img id="instagram" src="images/instagram1.jpeg"/>
-        <a href="https://www.instagram.com/allrecipes/" target="_blank"><img id="instagram-hover" src="images/instagram2.png"/></a>
-        
-        <img id="pinterest" src="images/pinterest1.jpeg"/>
-        <a href="https://www.pinterest.ca/allrecipes/" target="_blank"><img id="pinterest-hover" src="images/pinterest2.png"/></a>
-        -->
+        <a href="https://www.pinterest.ca/allrecipes/" target="_blank">
+        <img id="pinterest" src="images/pinterest1.jpeg" onmouseover="this.src='images/pinterest2.png'" onmouseout="this.src='images/pinterest1.jpeg'"/></a>
       </section>
 
       <h4><a href="http://x.specialoffers.meredith.com/ats/show.aspx?cr=588&fm=293&regSource=3667"  target="_blank">Subscribe</a></h4>
@@ -128,6 +119,7 @@
     <section class="copyright">
       <img id="meredith" src="images/meredith.png"/>
       <p>Allrecipes is part of the Meredith Food Group. © Copyright 2021 <a href="https://www.meredith.com/">Meredith Corporation</a>. All Rights Reserved.</p>
+     
     </section>
 
   </footer>
