--- a/index.html
+++ b/index.html
@@ -1,43 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <!--link to css-->
+<!--link to css-->
   <link rel="stylesheet" type="text/css" href="style.css">
-   <!--merriweather Regular 400 italic-->
+<!--merriweather Regular 400 italic-->
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
+<!-- Lato light 300 -->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+<!-- lobster Regular 400 -->
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+<!-- PT Sans Regular 400 -->
+  <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+
 <title>ChocolateBrowniesRecipe</title>
   <body>
   <header>
+<!-- navigation image -->
     <nav>
       <img src= "images/nav2.png"/>
     </nav>
-  <!--main logo-->
+<!--main logo-->
       <figure id="mainlogo">
         <a href="https://www.allrecipes.com/"><img src= "images/logobold.png"/></a>
       </figure>
+<!-- login sign up -->
     <p><a href="https://www.allrecipes.com/account/signin/?actionsource=recipe&loginreferrerurl=%2Frecipe%2F10549%2Fbest-brownies%2F&testcookieredirect=1" target="_blank">Login</a> |  <a href="https://www.allrecipes.com/account/signup/" target="_blank">Sign up</a></p>
-    <!--search bar-->
+<!--search bar-->
     <form class="searchrecipes" method="GET" action="https://www.allrecipes.com/search/results/?">
      <input id="textarea" type="text" name="search" placeholder="More Chocolate Recipes">
+<!-- search button -->
      <input id="submit" type="image" src="images/search-icon.png" value="Search"/>
-     <!--<button type="submit"><i class="search"></i></button>-->
     </form>
 
   </header>
-
+<!-- main -->
   <main>
     <head>
+<!-- title -->
       <h1><strong>Best Brownies</strong></h2>
       <h5>13,329 Ratings | 10,294 Reviews | 1,427 Photos</h5>
-      <img id="profile" src="images/profile.png"/>
+<!-- author image and name -->
+      <a href="https://www.allrecipes.com/cook/sunnyside1@hotmail.com/recipes/" target="_blank"><img id="profile" src="images/profile.png"/></a>
       <h3>By <a href="https://www.allrecipes.com/cook/sunnyside1@hotmail.com/recipes/" target="_blank">Angie</a></h3>
-      <!--image of brownies-->
+
+<!--image of brownies-->
       <figure class="image">
         <a id="video1" href="https://www.allrecipes.com/video/617/best-brownies/"><img class="browniesimage" src= "images/chocolatebrownie.png"/></a>
-      <div class="middle">
-        <div class="watch">Watch the video</div>
-      </div>
+<!--watch button-->
+      <section class="middle">
+          <a href="https://www.allrecipes.com/video/617/best-brownies/"><img class="watch" src= "images/watch.png"/></a>
+      </section>
       </figure>
-      <!--list of ingredients-->
+<!--list of ingredients-->
       <h2 class="ingredient">Ingredients</h2>
         <section class="list">
           <input type="checkbox" name="½ cup butter" value="½ cup butter">½ cup butter<br>
@@ -49,6 +62,7 @@
           <input type="checkbox" name="¼ teaspoon salt" value="¼ teaspoon salt">¼ teaspoon salt<br>
           <input type="checkbox" name="¼ teaspoon baking powder" value="¼ teaspoon baking powder">¼ teaspoon baking powder<br>
         </section>
+<!-- frosting ingredients list -->
         <h4>Frosting:</h4>
         <section class="frostinglist">
           <input type="checkbox" name="3 tablespoons butter, softened" value="3 tablespoons butter, softened">3 tablespoons butter, softened<br>
@@ -58,7 +72,7 @@
           <input type="checkbox" name="1 cup confectioners' sugar" value="1 cup confectioners' sugar">1 cup confectioners' sugar<br>
         </section>
 
-   <!--steps-->
+<!--steps-->
    <section>
     <h2 class="step">Steps</h2>
       <ol class="steps">
@@ -70,6 +84,7 @@
       </ol>
    </section>
 
+<!-- nutrients facts -->
    <section class="nutrition">
       <h3>Nutrition Facts</h3>
     <article>
@@ -77,28 +92,36 @@
     </article>
    </section>
 
-      <!--see more-->
+<!--see more-->
    <aside class="see-other">
         <a href="https://www.allrecipes.com/recipe/222788/grilled-chocolate-sandwich/" target="_blank"><img id="chocolate1" src= "images/chocolate1.png"/></a>
         <a href="https://www.allrecipes.com/recipe/229421/chocolate-bar-hot-chocolate/" target="_blank"><img id="chocolate2" src= "images/chocolate2.png"/></a>
         <a href="https://www.allrecipes.com/recipe/261176/perfectly-chocolate-chocolate-cake/" target="_blank"><img id="chocolate3" src= "images/chocolate3.png"/></a>
         <a href="https://www.allrecipes.com/recipe/15097/ultimate-double-chocolate-cookies/" target="_blank"><img id="chocolate4" src= "images/chocolate4.png"/></a>
         <a href="https://www.allrecipes.com/recipe/21601/chocolate-strawberries/" target="_blank"><img id="chocolate5" src= "images/chocolate5.png"/></a>
+        <br><br>
     </aside>
   </main>
-
+<!-- footer -->
   <footer>
+
+<!-- horizontal line divider -->
+    <hr id="above-footer-line" class="solid">
+  <!-- allrecipes logo -->
     <a href="https://www.allrecipes.com/"><img id="footer-logo" src="images/logo2.png"/></a>
+<!-- verticle line divider -->
+    <section class="vl"></section>
+<!-- learn more section -->
     <section class="learn-more">
       <h3>Learn More</h3>
       <h4><a href="https://websupport.meredith.com/hc/en-us" target="_blank">Customer Service</a></h4>
       <h4><a href="http://dish.allrecipes.com/mobile-apps/" target="_blank">Apps</a></h4>
       <h4><a href="http://dish.allrecipes.com/faq-sitemap/" target="_blank">Site Maps</a></h4>
     </section>
-
+<!-- contact us section -->
     <section class="contact-us">
       <h3>Contact Us</h3>
-
+<!-- social media icons -->
       <section class="subscribe-icons">
         <a href="https://www.facebook.com/allrecipes" target="_blank">
         <img id="facebook" src="images/facebook1.jpeg" onmouseover="this.src='images/facebook2.png'" onmouseout="this.src='images/facebook1.jpeg'"/></a>
@@ -115,13 +138,16 @@
 
       <h4><a href="http://x.specialoffers.meredith.com/ats/show.aspx?cr=588&fm=293&regSource=3667"  target="_blank">Subscribe</a></h4>
     </section>
-
+<!-- horizontal line divider -->
+    <hr id="below-footer-line" class="solid">
+    </footer>
+  
+<!-- meredith logo and copyright-->
     <section class="copyright">
       <img id="meredith" src="images/meredith.png"/>
       <p>Allrecipes is part of the Meredith Food Group. © Copyright 2021 <a href="https://www.meredith.com/">Meredith Corporation</a>. All Rights Reserved.</p>
      
     </section>
 
-  </footer>
  </body>
 </html>
