add all the contents, start to organize the page using display: grid

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <!--list of ingredients-->
       <h2 class="ingredient">Ingredients</h2>
         <section class="list">
-          <input type="checkbox" name="½ cup butter" value="½ cup butter">½ cup butter<br>
-          <input type="checkbox" name="1 cup white sugar" value="1 cup white sugar">1 cup white sugar<br>
+          <input type="checkbox" name="½ cup butter" value="½ cup butter"><label for="checkbox">½ cup butter<br>
+          <input type="checkbox" name="1 cup white sugar" value="1 cup white sugar"><label for="checkbox">1 cup white sugar<br>
           <input type="checkbox" name="2 eggs" value="2 eggs">2 eggs<br>
           <input type="checkbox" name="1 teaspoon vanilla extract" value="1 teaspoon vanilla extract">1 teaspoon vanilla extract<br>
           <input type="checkbox" name="⅓ cup unsweetened cocoa powder" value="⅓ cup unsweetened cocoa powder">⅓ cup unsweetened cocoa powder<br>
