organize copyright part

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 <!-- PT Sans Regular 400 -->
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+<!-- Public Sans light 300 -->
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap" rel="stylesheet">
+<!-- Carter One Regular 400 -->
+  <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
 
 <title>ChocolateBrowniesRecipe</title>
   <body>
@@ -63,7 +67,7 @@
           <input type="checkbox" name="¼ teaspoon baking powder" value="¼ teaspoon baking powder">¼ teaspoon baking powder<br>
         </section>
 <!-- frosting ingredients list -->
-        <h4>Frosting:</h4>
+        <h4 id="frosting">Frosting:</h4>
         <section class="frostinglist">
           <input type="checkbox" name="3 tablespoons butter, softened" value="3 tablespoons butter, softened">3 tablespoons butter, softened<br>
           <input type="checkbox" name="3 tablespoons unsweetened cocoa powder" value="3 tablespoons unsweetened cocoa powder">3 tablespoons unsweetened cocoa powder<br>
@@ -145,7 +149,11 @@
 <!-- meredith logo and copyright-->
     <section class="copyright">
       <img id="meredith" src="images/meredith.png"/>
+      
       <p>Allrecipes is part of the Meredith Food Group. © Copyright 2021 <a href="https://www.meredith.com/">Meredith Corporation</a>. All Rights Reserved.</p>
+      <br>
+      <br>
+      <br>
      
     </section>
 
