--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <!--link to css-->
   <link rel="stylesheet" type="text/css" href="style.css">
 <!--merriweather Regular 400 italic-->
@@ -10,14 +10,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 <!-- PT Sans Regular 400 -->
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-<!-- Source Sans Pro light 300 -->
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+<!-- Public Sans light 300 -->
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap" rel="stylesheet">
 <!-- Carter One Regular 400 -->
   <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
 
 <title>ChocolateBrowniesRecipe</title>
-  <body class="grid">
-  <header class="a box">
+  <body>
+  <header>
 <!-- navigation image -->
     <nav>
       <img src= "images/nav2.png" alt="navigation"/>
@@ -34,37 +34,126 @@
 <!-- search button -->
      <input id="submit" type="image" src="images/search-icon.png" alt="search icon"/>
     </form>
-    <br>
 
   </header>
 <!-- main -->
   <main>
-    <section class="b box">
+    <head>
 <!-- title -->
       <h1><strong>Best Brownies</strong></h1>
       <h5>13,329 Ratings | 10,294 Reviews | 1,427 Photos</h5>
 <!-- author image and name -->
       <a href="https://www.allrecipes.com/cook/sunnyside1@hotmail.com/recipes/" target="_blank"><img id="profile" src="images/profile.png" alt="profile image of the author (open a new tab)"/></a>
       <h3>By <a href="https://www.allrecipes.com/cook/sunnyside1@hotmail.com/recipes/" target="_blank">Angie</a></h3>
+
+<!--image of brownies-->
+      <figure class="image">
+        <a id="video1" href="https://www.allrecipes.com/video/617/best-brownies/"><img class="browniesimage" src= "images/chocolatebrownie.png"/></a>
+<!--watch button-->
+      <section class="middle">
+          <a href="https://www.allrecipes.com/video/617/best-brownies/"><img class="watch" src= "images/watch.png"/></a>
+      </section>
+      </figure>
+<!--list of ingredients-->
+      <h2 class="ingredient">Ingredients</h2>
+        <section class="list">
+          <input type="checkbox" name="½ cup butter" value="½ cup butter"><label for="checkbox">½ cup butter<br>
+          <input type="checkbox" name="1 cup white sugar" value="1 cup white sugar"><label for="checkbox">1 cup white sugar<br>
+          <input type="checkbox" name="2 eggs" value="2 eggs">2 eggs<br>
+          <input type="checkbox" name="1 teaspoon vanilla extract" value="1 teaspoon vanilla extract">1 teaspoon vanilla extract<br>
+          <input type="checkbox" name="⅓ cup unsweetened cocoa powder" value="⅓ cup unsweetened cocoa powder">⅓ cup unsweetened cocoa powder<br>
+          <input type="checkbox" name="½ cup all-purpose flour" value="½ cup all-purpose flour">½ cup all-purpose flour<br>
+          <input type="checkbox" name="¼ teaspoon salt" value="¼ teaspoon salt">¼ teaspoon salt<br>
+          <input type="checkbox" name="¼ teaspoon baking powder" value="¼ teaspoon baking powder">¼ teaspoon baking powder<br>
+        </section>
+<!-- frosting ingredients list -->
+        <h4 id="frosting">Frosting:</h4>
+        <section class="frostinglist">
+          <input type="checkbox" name="3 tablespoons butter, softened" value="3 tablespoons butter, softened">3 tablespoons butter, softened<br>
+          <input type="checkbox" name="3 tablespoons unsweetened cocoa powder" value="3 tablespoons unsweetened cocoa powder">3 tablespoons unsweetened cocoa powder<br>
+          <input type="checkbox" name="1 tablespoon honey" value="1 tablespoon honey">1 tablespoon honey<br>
+          <input type="checkbox" name="1 teaspoon vanilla extract" value="1 teaspoon vanilla extract">1 teaspoon vanilla extract<br>
+          <input type="checkbox" name="1 cup confectioners' sugar" value="1 cup confectioners' sugar">1 cup confectioners' sugar<br>
+        </section>
+
+<!--steps-->
+   <section>
+    <h2 class="step">Steps</h2>
+      <ol class="steps">
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour an 8-inch square pan.</li>
+        <li>In a large saucepan, melt 1/2 cup butter. Remove from heat, and stir in sugar, eggs, and 1 teaspoon vanilla. Beat in 1/3 cup cocoa, 1/2 cup flour, salt, and baking powder. Spread batter into prepared pan.</li>
+        <li>Bake in the preheated oven for 25 to 30 minutes. Do not overcook.</li>
+        <br>
+        <li><strong>To Make Frosting:</strong> Combine 3 tablespoons softened butter, 3 tablespoons cocoa, honey, 1 teaspoon vanilla extract, and 1 cup confectioners' sugar. Stir until smooth. Frost brownies while they are still warm.</li>
+      </ol>
+   </section>
+
+<!-- nutrients facts -->
+   <section class="nutrition">
+      <h3>Nutrition Facts</h3>
+    <article>
+      <p><strong>Per Serving:</strong> 183 calories; protein 1.8g; carbohydrates 25.7g; fat 9g; cholesterol 44.2mg; sodium 109.7mg.</p>
+    </article>
+   </section>
+
+<!--see more-->
+   <aside class="see-other">
+        <a href="https://www.allrecipes.com/recipe/222788/grilled-chocolate-sandwich/" target="_blank"><img id="chocolate1" src= "images/chocolate1.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/229421/chocolate-bar-hot-chocolate/" target="_blank"><img id="chocolate2" src= "images/chocolate2.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/261176/perfectly-chocolate-chocolate-cake/" target="_blank"><img id="chocolate3" src= "images/chocolate3.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/15097/ultimate-double-chocolate-cookies/" target="_blank"><img id="chocolate4" src= "images/chocolate4.png"/></a>
+        <a href="https://www.allrecipes.com/recipe/21601/chocolate-strawberries/" target="_blank"><img id="chocolate5" src= "images/chocolate5.png"/></a>
+        <br><br>
+    </aside>
+  </main>
+<!-- footer -->
+  <footer>
+
+<!-- horizontal line divider -->
+    <hr id="above-footer-line" class="solid">
+  <!-- allrecipes logo -->
+    <a href="https://www.allrecipes.com/"><img id="footer-logo" src="images/logo2.png"/></a>
+<!-- verticle line divider -->
+    <section class="vl"></section>
+<!-- learn more section -->
+    <section class="learn-more">
+      <h3>Learn More</h3>
+      <h4><a href="https://websupport.meredith.com/hc/en-us" target="_blank">Customer Service</a></h4>
+      <h4><a href="http://dish.allrecipes.com/mobile-apps/" target="_blank">Apps</a></h4>
+      <h4><a href="http://dish.allrecipes.com/faq-sitemap/" target="_blank">Site Maps</a></h4>
+    </section>
+<!-- contact us section -->
+    <section class="contact-us">
+      <h3>Contact Us</h3>
+<!-- social media icons -->
+      <section class="subscribe-icons">
+        <a href="https://www.facebook.com/allrecipes" target="_blank">
+        <img id="facebook" src="images/facebook1.jpeg" onmouseover="this.src='images/facebook2.png'" onmouseout="this.src='images/facebook1.jpeg'"/></a>
+
+        <a href="https://twitter.com/Allrecipes" target="_blank">
+        <img id="twitter" src="images/twitter1.jpeg" onmouseover="this.src='images/twitter2.png'" onmouseout="this.src='images/twitter1.jpeg'"/></a>
+
+        <a href="https://www.instagram.com/allrecipes/" target="_blank">
+        <img id="instagram" src="images/instagram1.jpeg" onmouseover="this.src='images/instagram2.png'" onmouseout="this.src='images/instagram1.jpeg'"/></a>
+
+        <a href="https://www.pinterest.ca/allrecipes/" target="_blank">
+        <img id="pinterest" src="images/pinterest1.jpeg" onmouseover="this.src='images/pinterest2.png'" onmouseout="this.src='images/pinterest1.jpeg'"/></a>
       </section>
 
-<!-- testing -->
-
-   <div class="box c">image</div>
-    <div class="box d">ingredients</div>
-    <div class="box e">stps</div>
-    <div class="box f">see other</div>
-    <div class="box g">footer</div>
-
-
-
-
+      <h4><a href="http://x.specialoffers.meredith.com/ats/show.aspx?cr=588&fm=293&regSource=3667"  target="_blank">Subscribe</a></h4>
+    </section>
+<!-- horizontal line divider -->
+    <hr id="below-footer-line" class="solid">
+    </footer>
   
 <!-- meredith logo and copyright-->
-    <section class="copyright h box">
-      <img id="meredith" src="images/meredith.png" alt="meredith logo"/>
+    <section class="copyright">
+      <img id="meredith" src="images/meredith.png"/>
       
       <p>Allrecipes is part of the Meredith Food Group. © Copyright 2021 <a href="https://www.meredith.com/">Meredith Corporation</a>. All Rights Reserved.</p>
+      <br>
+      <br>
+      <br>
      
     </section>
 
