--- a/index.html
+++ b/index.html
@@ -47,18 +47,19 @@
       <h3>By <a href="https://www.allrecipes.com/cook/sunnyside1@hotmail.com/recipes/" target="_blank">Angie</a></h3>
 
 <!--image of brownies-->
-      <figure class="image">
-        <a id="video1" href="https://www.allrecipes.com/video/617/best-brownies/"><img class="browniesimage" src= "images/chocolatebrownie.png"/></a>
+      <figure class="image c box">
+        <a id="video1" href="https://www.allrecipes.com/video/617/best-brownies/"><img class="browniesimage" src= "images/chocolatebrownie.png" alt="chocolate brownies picture (open a new tab of video)"/></a>
 <!--watch button-->
       <section class="middle">
-          <a href="https://www.allrecipes.com/video/617/best-brownies/"><img class="watch" src= "images/watch.png"/></a>
+          <a href="https://www.allrecipes.com/video/617/best-brownies/"><img class="watch" src= "images/watch.png" alt="watch button (open a new tab of video)"/></a>
       </section>
       </figure>
 <!--list of ingredients-->
+     <section class="d box">
       <h2 class="ingredient">Ingredients</h2>
         <section class="list">
-          <input type="checkbox" name="½ cup butter" value="½ cup butter"><label for="checkbox">½ cup butter<br>
-          <input type="checkbox" name="1 cup white sugar" value="1 cup white sugar"><label for="checkbox">1 cup white sugar<br>
+          <input type="checkbox" name="½ cup butter" value="½ cup butter">½ cup butter<br>
+          <input type="checkbox" name="1 cup white sugar" value="1 cup white sugar">1 cup white sugar<br>
           <input type="checkbox" name="2 eggs" value="2 eggs">2 eggs<br>
           <input type="checkbox" name="1 teaspoon vanilla extract" value="1 teaspoon vanilla extract">1 teaspoon vanilla extract<br>
           <input type="checkbox" name="⅓ cup unsweetened cocoa powder" value="⅓ cup unsweetened cocoa powder">⅓ cup unsweetened cocoa powder<br>
@@ -66,6 +67,8 @@
           <input type="checkbox" name="¼ teaspoon salt" value="¼ teaspoon salt">¼ teaspoon salt<br>
           <input type="checkbox" name="¼ teaspoon baking powder" value="¼ teaspoon baking powder">¼ teaspoon baking powder<br>
         </section>
+<!-- horizontal line divider -->
+    <hr id="above-steps-line" class="solid">
 <!-- frosting ingredients list -->
         <h4 id="frosting">Frosting:</h4>
         <section class="frostinglist">
@@ -75,17 +78,19 @@
           <input type="checkbox" name="1 teaspoon vanilla extract" value="1 teaspoon vanilla extract">1 teaspoon vanilla extract<br>
           <input type="checkbox" name="1 cup confectioners' sugar" value="1 cup confectioners' sugar">1 cup confectioners' sugar<br>
         </section>
-
+     </section>
 <!--steps-->
-   <section>
-    <h2 class="step">Steps</h2>
+  <section class="e box">
+   <section class="step">
+    <h2 id="step">Steps</h2>
       <ol class="steps">
         <li>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour an 8-inch square pan.</li>
         <li>In a large saucepan, melt 1/2 cup butter. Remove from heat, and stir in sugar, eggs, and 1 teaspoon vanilla. Beat in 1/3 cup cocoa, 1/2 cup flour, salt, and baking powder. Spread batter into prepared pan.</li>
         <li>Bake in the preheated oven for 25 to 30 minutes. Do not overcook.</li>
-        <br>
-        <li><strong>To Make Frosting:</strong> Combine 3 tablespoons softened butter, 3 tablespoons cocoa, honey, 1 teaspoon vanilla extract, and 1 cup confectioners' sugar. Stir until smooth. Frost brownies while they are still warm.</li>
       </ol>
+        
+        <p><strong>To Make Frosting:</strong> Combine 3 tablespoons softened butter, 3 tablespoons cocoa, honey, 1 teaspoon vanilla extract, and 1 cup confectioners' sugar. Stir until smooth. Frost brownies while they are still warm.</p>
+    
    </section>
 
 <!-- nutrients facts -->
@@ -95,24 +100,24 @@
       <p><strong>Per Serving:</strong> 183 calories; protein 1.8g; carbohydrates 25.7g; fat 9g; cholesterol 44.2mg; sodium 109.7mg.</p>
     </article>
    </section>
-
+  </section>
 <!--see more-->
-   <aside class="see-other">
-        <a href="https://www.allrecipes.com/recipe/222788/grilled-chocolate-sandwich/" target="_blank"><img id="chocolate1" src= "images/chocolate1.png"/></a>
-        <a href="https://www.allrecipes.com/recipe/229421/chocolate-bar-hot-chocolate/" target="_blank"><img id="chocolate2" src= "images/chocolate2.png"/></a>
-        <a href="https://www.allrecipes.com/recipe/261176/perfectly-chocolate-chocolate-cake/" target="_blank"><img id="chocolate3" src= "images/chocolate3.png"/></a>
-        <a href="https://www.allrecipes.com/recipe/15097/ultimate-double-chocolate-cookies/" target="_blank"><img id="chocolate4" src= "images/chocolate4.png"/></a>
-        <a href="https://www.allrecipes.com/recipe/21601/chocolate-strawberries/" target="_blank"><img id="chocolate5" src= "images/chocolate5.png"/></a>
+   <aside class="see-other f box">
+        <a href="https://www.allrecipes.com/recipe/222788/grilled-chocolate-sandwich/" target="_blank"><img id="chocolate1" src= "images/chocolate1.png" alt="grilled chocolate sandwich (open a new tab)"/></a>
+        <a href="https://www.allrecipes.com/recipe/229421/chocolate-bar-hot-chocolate/" target="_blank"><img id="chocolate2" src= "images/chocolate2.png" alt="chocolate bar hot chocolate (open a new tab)"/></a>
+        <a href="https://www.allrecipes.com/recipe/261176/perfectly-chocolate-chocolate-cake/" target="_blank"><img id="chocolate3" src= "images/chocolate3.png" alt="perfectly chocolate chocolate cake (open a new tab)"/></a>
+        <a href="https://www.allrecipes.com/recipe/15097/ultimate-double-chocolate-cookies/" target="_blank"><img id="chocolate4" src= "images/chocolate4.png" alt="ultimate double chocolate cookies (open a new tab)"/></a>
+        <a href="https://www.allrecipes.com/recipe/21601/chocolate-strawberries/" target="_blank"><img id="chocolate5" src= "images/chocolate5.png" alt="chocolate strawberries (open a new tab)"/></a>
         <br><br>
     </aside>
   </main>
 <!-- footer -->
-  <footer>
+  <footer class="g box">
 
 <!-- horizontal line divider -->
     <hr id="above-footer-line" class="solid">
   <!-- allrecipes logo -->
-    <a href="https://www.allrecipes.com/"><img id="footer-logo" src="images/logo2.png"/></a>
+    <a href="https://www.allrecipes.com/"><img id="footer-logo" src="images/logo2.png" alt="allrecipes logo (open a new tab)"/></a>
 <!-- verticle line divider -->
     <section class="vl"></section>
 <!-- learn more section -->
@@ -128,16 +133,16 @@
 <!-- social media icons -->
       <section class="subscribe-icons">
         <a href="https://www.facebook.com/allrecipes" target="_blank">
-        <img id="facebook" src="images/facebook1.jpeg" onmouseover="this.src='images/facebook2.png'" onmouseout="this.src='images/facebook1.jpeg'"/></a>
+        <img id="facebook" src="images/facebook1.jpeg" onmouseover="this.src='images/facebook2.png'" onmouseout="this.src='images/facebook1.jpeg'" alt="fakebook icon (open a new tab)"/></a>
 
         <a href="https://twitter.com/Allrecipes" target="_blank">
-        <img id="twitter" src="images/twitter1.jpeg" onmouseover="this.src='images/twitter2.png'" onmouseout="this.src='images/twitter1.jpeg'"/></a>
+        <img id="twitter" src="images/twitter1.jpeg" onmouseover="this.src='images/twitter2.png'" onmouseout="this.src='images/twitter1.jpeg'" alt="twitter icon (open a new tab)"/></a>
 
         <a href="https://www.instagram.com/allrecipes/" target="_blank">
-        <img id="instagram" src="images/instagram1.jpeg" onmouseover="this.src='images/instagram2.png'" onmouseout="this.src='images/instagram1.jpeg'"/></a>
+        <img id="instagram" src="images/instagram1.jpeg" onmouseover="this.src='images/instagram2.png'" onmouseout="this.src='images/instagram1.jpeg'" alt="instagram icon (open a new tab)"/></a>
 
         <a href="https://www.pinterest.ca/allrecipes/" target="_blank">
-        <img id="pinterest" src="images/pinterest1.jpeg" onmouseover="this.src='images/pinterest2.png'" onmouseout="this.src='images/pinterest1.jpeg'"/></a>
+        <img id="pinterest" src="images/pinterest1.jpeg" onmouseover="this.src='images/pinterest2.png'" onmouseout="this.src='images/pinterest1.jpeg'" alt="pinterest icon (open a new tab)"/></a>
       </section>
 
       <h4><a href="http://x.specialoffers.meredith.com/ats/show.aspx?cr=588&fm=293&regSource=3667"  target="_blank">Subscribe</a></h4>
@@ -145,6 +150,7 @@
 <!-- horizontal line divider -->
     <hr id="below-footer-line" class="solid">
     </footer>
+
   
 <!-- meredith logo and copyright-->
     <section class="copyright">
